--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,47 +1,114 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+  /* My CSS for Assignment */
+/* .wrapper {
+    width: 960px;
+    margin: 0 auto;
+  } do I need to use the wrapper?*/
+
+.container {
+      width: 960px;
+      margin: 0 auto;
+  }
+
+header {
+    background: #ffffff;
+    border-color: #ccc;
+  }
+
 body {
     padding: 0;
     margin: 0;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 150%;
-    color: #777777;
-    background: #ffffff;
+    background-image: url("concrete_seamless.png")
+  }
+  
+  
+.header-links {
+    float: right;
+}
+
+.header-links li {
+    display: inline-block;
+}
+}
+  
+
+h2 {
+    font-family: 'Georgia', Times, Times New Roman, serif;  
+    font-size: 24px;
+    color: #4aaaa5;
+}
+  
+.main-container {
+    margin: 20px;
+    background: #fff;
     border-color: #dddddd;
 
   }
   
-  header {
-    background: #ffffff;
-    border-color: #cccccc;
-  }
   
-  #header-links {
-    float: right;
-}
   
-  h2 {
-    font-family: 'Georgia', Times, Times New Roman, serif;  
-    font-size: 24px;
-    color: #4aaaa5;
-  }
-  
-  .main-container {
-    margin: 20px;
-  }
-  
-  .container {
-    width: 960px;
-    margin: 0 auto;
-  }
-  
-  #main-bio,
-  #contact-info,
-  #bio-image {
+#main-bio,
+#contact-info,
+#bio-image {
     float: left;
   }
   
   #bio-image {
     height: 150px;
     margin-right: 20px;
+  }
+
+  footer {
+      background-color: #666;
   }
 
   /* Style inputs with type="text", select elements and textareas */
@@ -66,14 +133,16 @@ input[type=submit] {
     cursor: pointer;
 }
 
+
+
 /* When moving the mouse over the submit button, add a darker green color */
-input[type=submit]:hover {
-    background-color: #45a049;
-}
+/* input[type=submit]:hover { */
+    /* background-color: #45a049; */
+/* } */
 
 /* Add a background color and some padding around the form */
-.container {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-}
+/* .container { */
+    /* border-radius: 5px; */
+    /* background-color: white; */
+    /* padding: 20px; */
+/* } */
