--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,52 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-  /* My CSS for Assignment */
+ /* My CSS for Assignment */
 /* .wrapper {
     width: 960px;
     margin: 0 auto;
@@ -62,22 +14,40 @@ header {
     border-color: #ccc;
   }
 
+.header-links {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    color: #77777;
+    border-right: solid 1 px #777;
+    float: right;
+}
+
+.header-links a {
+    border-right: solid 1px #777777;
+}
+
+.header-links a:last-of-type{
+    border-right: none;
+    padding: 5px;
+}
+
 body {
     padding: 0;
-    margin: 0;
+    margin: 20px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 150%;
     background-image: url("concrete_seamless.png")
   }
   
   
-.header-links {
+/* .header-links {
     float: right;
-}
+} */
 
 .header-links li {
     display: inline-block;
-}
 }
   
 
