--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,86 +1,157 @@
- /* My CSS for Assignment */
-/* .wrapper {
-    width: 960px;
-    margin: 0 auto;
-  } do I need to use the wrapper?*/
-
-.container {
-      width: 960px;
-      margin: 0 auto;
+* {
+    box-sizing: border-box;
+  }
+  
+  a {
+    display: inline-block;
+    text-decoration: none;
+    border-right: solid #777 1px;
+    padding: 0 10px;
   }
 
-header {
-    background: #ffffff;
+  a:hover {
+    color: #4aaaa5;
+  }
+  
+  a:last-child {
+      border-right: none;
+      padding-right: 0;
+  }
+
+  body {
+    width: 100%;
+    margin: 0;
+    background-color: gold;
+    
+  }
+
+.content {
+    min-height: calc(100vh - 50px);
+    background-image: url(../images/concrete_seamless.png);
+    background-color: lightgrey;
+}
+  
+  .head-container {
+      width: 100%;
+      height: 100px;
+      margin: 0;
+      padding: 0;
+      background-color: #fff;
+  }
+
+  
+  .head-wrapper {
+    background-color: #ffffff;
     border-color: #ccc;
-  }
-
-.header-links {
-    list-style-type: none;
+    width: 960px;
     margin: 0;
     padding: 0;
-    overflow: hidden;
-    color: #77777;
-    border-right: solid 1 px #777;
+    margin: 0 auto;
+    color: #4aaaa5; 
+    height: 100px;
+  }
+  
+  header h2 {
+    background-color: #4aaaa5;
+    color: #fff;
+    float: left;
+    line-height: 100px;
+    margin: 0;
+    padding: 0 30px;
+    
+  }
+
+  .header-links {
     float: right;
-}
+    padding: 40px 0;
+    color: #777;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+    
+  a.header-links {
+    border-right: solid 
+  }
 
-.header-links a {
-    border-right: solid 1px #777777;
-}
-
-.header-links a:last-of-type{
-    border-right: none;
-    padding: 5px;
-}
-
-body {
-    padding: 0;
-    margin: 20px;
+  p {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 150%;
-    background-image: url("concrete_seamless.png")
+    color: #777;
+    
+  }
+
+  label {
+      font-family: Arial, Helvetica, sans-serif;
+      color: #777;
   }
   
+  .main-container {
+    width: 100%;
+    margin: 0;
+    padding: 30px;
+    min-height: 100%;
+  }
   
-/* .header-links {
-    float: right;
-} */
-
-.header-links li {
-    display: inline-block;
-}
+ .main-wrapper {
+    width: 960px;
+    margin: 0 auto;
+    padding: 10px 30px;
+    background-color: #fff;
+    border: solid #ddd 1px;
+  }
   
-
-h2 {
-    font-family: 'Georgia', Times, Times New Roman, serif;  
-    font-size: 24px;
+  #about {
+    border-bottom: solid lightslategray 2px;
     color: #4aaaa5;
-}
+    margin-bottom: 20px;
+ }
   
-.main-container {
-    margin: 20px;
-    background: #fff;
-    border-color: #dddddd;
+ #contact {
+    border-bottom: solid lightslategray 2px;
+    color: #4aaaa5;
+    margin-bottom: 20px;
+ }
 
+ #portfolio {
+    border-bottom: solid lightslategray 2px;
+    color: #4aaaa5;
+    margin-bottom: 20px;
+ }
+
+  #main-bio,
+  #form-container,
+  #portfolio-images {
+      margin: 5px 0;
   }
-  
-  
-  
-#main-bio,
-#contact-info,
-#bio-image {
-    float: left;
+
+  #portfolio-images {
+    width: 900px;
+    margin: 0 auto;
+    padding: 10px 30px;
+    background-color: #fff;
+    border: solid rgb(97, 39, 39) 1px;
   }
-  
+
   #bio-image {
+    float: left;
+    margin: 5px 20px 5px 0;
     height: 150px;
-    margin-right: 20px;
   }
 
   footer {
-      background-color: #666;
+    width: 100%;
+    text-align: center;
+    padding: 0px;
+    border-top: solid #4aaaa5 5px;
+    font-size: .5em;
+    clear: both;
+    background-color: #666;
+    height: 50px;
   }
 
+footer p {
+      color: #ddd;
+  }
+  
   /* Style inputs with type="text", select elements and textareas */
 input[type=text], select, textarea {
     width: 100%; /* Full width */
@@ -93,9 +164,9 @@ input[type=text], select, textarea {
     resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
 }
 
-/* Style the submit button with a specific background color etc */
+/* Style the submit button with a specific background color and hover etc */
 input[type=submit] {
-    background-color: #4CAF50;
+    background-color: #4aaaa5;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -103,16 +174,15 @@ input[type=submit] {
     cursor: pointer;
 }
 
+input[type=submit]:hover  {
+    background-color: #777;
+}
 
-
-/* When moving the mouse over the submit button, add a darker green color */
-/* input[type=submit]:hover { */
-    /* background-color: #45a049; */
-/* } */
-
-/* Add a background color and some padding around the form */
-/* .container { */
-    /* border-radius: 5px; */
-    /* background-color: white; */
-    /* padding: 20px; */
-/* } */
+#hangman,
+#rpg,
+#trivia,
+#rutgers,
+#rock-paper-scissors    {
+    width: 33%;
+    margin: 0 30px 40px 0;
+}
