--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,11 +178,63 @@ input[type=submit]:hover  {
     background-color: #777;
 }
 
-#hangman,
+/* #hangman,
 #rpg,
 #trivia,
 #rutgers,
 #rock-paper-scissors    {
     width: 33%;
     margin: 0 30px 40px 0;
+} */
+
+.gallery-images {
+  position: relative;
+  width: 900px;
+  margin: 0 auto 40px;
+  /* background: #fff; */
+  border: solid pink 1px;
+  }
+
+  .gallery {
+    width: 300px;
+    height: 200px;
+
+    
+  }
+figure {
+  display: block;
+  margin: 0;
 }
+
+#box-1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+  #box-2 {
+    position: absolute;
+    top: 0;
+    left: 330px;
+    
+  }
+
+  #box-3 {
+    position: absolute;
+    top: 250px;
+    left: 0;
+  
+  }
+
+  #box-4 {
+    position: absolute;
+    top: 250px;
+    left: 330px;
+  }
+
+  #box-5 {
+    position: absolute;
+    top: 500px;
+    left: 0;
+  }
+
