--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,6 +152,7 @@
 
 footer p {
       color: #ddd;
+      margin-top: 30px;
   }
   
   /* Style inputs with type="text", select elements and textareas */
